[gd_scene load_steps=8 format=2]

[ext_resource path="res://buildings/fixed_house.png" type="Texture" id=1]
[ext_resource path="res://buildings/broken_house.png" type="Texture" id=2]
[ext_resource path="res://buildings/House.gd" type="Script" id=3]
[ext_resource path="res://buildings/BrokenHouse.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 100, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 409.246, 159.272 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 250, 100 )

[node name="House" type="Node2D"]
script = ExtResource( 3 )

[node name="LeftSidePlatform" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftSidePlatform"]
position = Vector2( -324.706, 58.2432 )
rotation = 5.93412
shape = SubResource( 1 )

[node name="BrokenHouse" type="StaticBody2D" parent="."]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BrokenHouse"]
position = Vector2( 2.18402, 55.3311 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="BrokenHouse"]
texture = ExtResource( 2 )

[node name="FixedHouse" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="TopPlatform" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopPlatform"]
position = Vector2( 34.9459, -84.4526 )
shape = SubResource( 3 )
